k8s/overlays/prod/patch-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-prefixes
spec:
  stripPrefix:
    prefixes:
      - /api
      - /ai

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: ygss-prod-strip-prefixes@kubernetescrd
spec:
  rules:
    - host: j13a103.p.ssafy.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
          - path: /ai
            pathType: Prefix
            backend:
              service:
                name: ai-service
                port:
                  number: 80
